--- a/.gitignore
+++ b/.gitignore
@@ -3,40 +3,6 @@
 .RData
 .Ruserdata
 cache/*
-add.*
-*.zip
-*.synctex.gz
-*.bbl
-*.out
-*.vrb
-*.toc
-*.log
 *~
-figure/*
-main-concordance.tex
-main.tex
-doc/*
-results/*
-figure/*
-*.acn
-*.bbl
-*.aux
-*.glo
-*.fff
-*.ist
-data/abc_sims*
-00.Simulation.html
-1.ABC.html
-0.IntroBayesian.html
-2.ABC_flavours.html
-2.Classical_ABC.html
-3.GoodPractices.html
-2.ClassicalABC.html
-3.ClassicalABC.html
-4.ABCRF.html
-5.Beyond.html
-README.html
-4.Beyond.html
-5.ABCRF.html
-6.ABCRFcont.html
-2.GoodPractices.html
+*.html
+*_files
